# test-task-rekruto

./: README.md  docker-compose.yml
nginx/: nginx.conf
rekruto/: .env  Dockerfile  manage.py  pyproject.toml
rekruto/api/: urls.py  views.py
rekruto/rekruto/: asgi.py  configs.py  settings.py  wsgi.py
rekruto/templates/: main.html
